Finishing about and resume section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.navbar {
+  backdrop-filter: blur(10px);
+  background: rgba(30, 30, 30, 0.8);
+}
