Update contact section page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar {
+.navbar, .navbar-mobile {
   backdrop-filter: blur(10px);
   background: rgba(30, 30, 30, 0.8);
 }
